2011-11-08  Paolo Carlini  <paolo.carlini@oracle.com>

	* testsuite/29_atomics/headers/atomic/macros.cc: Avoid -Wall
	warnings.
	* testsuite/29_atomics/atomic/cons/user_pod.cc: Likewise.

2011-11-08  Jonathan Wakely  <jwakely.gcc@gmail.com>

	PR libstdc++/51018
	* testsuite/30_threads/thread/native_handle/typesizes.cc: Do not run
	on netbsd.

2011-11-07  Aldy Hernandez  <aldyh@redhat.com>
	    Richard Henderson  <rth@redhat.com>

	Merged from transactional-memory.

	* testsuite/util/testsuite_abi.cc (check_version): Add CXXABI_TM_1.
	* libsupc++/eh_tm.cc: New file.
	* libsupc++/unwind-cxx.h (__cxa_tm_cleanup): Declare.
	* config/abi/pre/gnu.ver: Export __cxa_tm_cleanup.
	* config/abi/pre/gnu-versioned-namespace.ver: Likewise.
	* libsupc++/Makefile.am (sources): Add eh_tm.cc.
	* libsupc++/Makefile.in: Rebuild.

2011-11-07  Paolo Carlini  <paolo.carlini@oracle.com>

	PR libstdc++/51018
	* include/profile/impl/profiler_node.h (__stack_hash::
	operator()(__stack_t)): Just use std::size_t everywhere.

2011-11-07  Jonathan Wakely  <jwakely.gcc@gmail.com>

	* include/std/future (__future_base::_Ptr): Use alias-declaration.
	(__is_same_pkgdtask): Rename to __constrain_pkgdtask and use decay
	instead of remove_reference so that cv-quals are removed.

2011-11-07  Ed Smith-Rowland  <3dw4rd@verizon.net>

	* include/precompiled/stdc++.h: Add cstdalign.

2011-11-07  Paolo Carlini  <paolo.carlini@oracle.com>

	* include/std/complex (complex<>::real(), complex<>::imag()):
	Remove redundant const qualifiers.

2011-11-07  Jonathan Wakely  <jwakely.gcc@gmail.com>

	* include/bits/ptr_traits.h (__rebind): Replace with...
	(rebind): Implement using alias-declaration.
	* include/ext/pointer.h (__rebind): Replace with...
	(rebind): Implement using alias-declaration.
	* include/bits/alloc_traits.h (__rebind_alloc, __rebind_traits):
	Replace with...
	(rebind_alloc, rebind_traits): Implement using alias-declaration.
	* include/ext/alloc_traits.h (rebind): Use rebind_alloc instead of