@@ -1,5 +1,14 @@
 2011-11-08  Paolo Carlini  <paolo.carlini@oracle.com>
 
+	* acinclude.m4 ([GLIBCXX_ENABLE_VISIBILITY]): Rename to
+	[GLIBCXX_ENABLE_LIBSTDCXX_VISIBILITY], likewise for the
+	option itself, to --enable-libstdcxx-visibility.
+	* configure.ac: Adjust call.
+	* doc/xml/manual/configure.xml: Update.
+	* configure: Regenerate.
+
+2011-11-08  Paolo Carlini  <paolo.carlini@oracle.com>
+
 	* testsuite/29_atomics/headers/atomic/macros.cc: Avoid -Wall
 	warnings.
 	* testsuite/29_atomics/atomic/cons/user_pod.cc: Likewise.
